<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:orientation="vertical">

    <TextView
        android:id="@+id/WTFisGazpacho_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="40dp"
        android:text="@string/WTFisGazpacho_text_view1"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <Button
            android:id="@+id/tradicional_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/tradicional_button1"/>

        <Button
            android:id="@+id/choice_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/choice_button1"/>



    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gazpacho1" />


</LinearLayout>